sponge: mostly finish